# Smart-E.S.P.R.I.T

./: 3B6G1.glade.bak  3B6G1.gladep  Bakary.c  Makefile  Makefile.am  Makefile.in  callbacks.c  config.h  config.status  configure  configure.in  main.c
Smart ESPRIT/autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: 3b6g1  BD.txt  Capteur.txt  Makefile  Makefile.am  Makefile.in  Nutritionniste.txt  admin.c  admin.h  admin.txt  agent.c  agent.h  callbacks.c  callbacks.h  capteur.c  capteur.h  capteur1.txt  capteur2.txt  debit.txt  etudiant.txt  interface.c  interface.c.bak  interface.h.bak  main.c  menu.c  menu.h  rec.c  rec.h  ruptstock.txt  stock.c  stock.h  stocks.txt
